# flight-sim

./: CMakeLists.txt  README.md
curves/: su34_lift_aoa.txt
shaders/: debug_grid.frag  debug_grid.vert  lambert.frag  lambert.vert  skybox.frag  skybox.vert  wing_force_debug.frag  wing_force_debug.vert
src/: main.cpp  pch.hpp
src/dynamics/: airfoil.hpp  curve.hpp  wing.hpp  wing_3d_helper.hpp
src/entity/: basic_camera.cpp  basic_camera.hpp  debug_grid.hpp  follow_camera.cpp  follow_camera.hpp  fps_camera.cpp  fps_camera.hpp  jet.cpp  jet.hpp  skybox.hpp  transform.cpp  transform.hpp
src/gfx/: colored_mesh.cpp  colored_mesh.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  uniform_buffer.cpp  uniform_buffer.hpp  window.cpp  window.hpp
tools/area_calc/: area.py
tools/spline_generator/: cubic_spline.py
